fix cors 2